# Decision-Machine

./: .env.example  .gitignore  README.md  fc_app.py  pyproject.toml  requirements.txt  s.yaml  test_run.py
cli/: __init__.py  __main__.py  main.py
docs/: 一句话简介.md  详细介绍.md
src/decision_machine/: __init__.py  config.py  constants.py  export.py  logger.py  types.py
src/decision_machine/agents/: __init__.py  factory.py  personas.py
src/decision_machine/engine/: __init__.py  debate.py  grouping.py  phases.py
src/decision_machine/tools/: __init__.py  web_search.py
src/decision_machine/ui/: __init__.py  streaming.py  styles.py  terminal.py
tests/: __init__.py  test_config.py  test_grouping.py  test_parser.py  test_types.py
web/: __init__.py  app.py
web/api/: __init__.py  routes.py  sse_routes.py  task_manager.py
web/static/: app.js  app_fc.js  index.html  index_fc.html  style.css
web/ui/: __init__.py  web_stream.py  web_ui.py
